tests/ui/impl-trait/issues/issue-54600.stderr
error[E0562]: `impl Trait` is not allowed in the type of variable bindings
  --> $DIR/issue-54600.rs:4:19
   |
LL |     let x: Option<impl Debug> = Some(44_u32);
   |                   ^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
